# owami-network-mvp

./: .deployment_marker  .env  .env.aiven  .env.example  .env.production  .gitignore  AIVEN_SETUP_GUIDE.md  API_DOCS.md  API_DOCS.yaml  API_DOCS_DAPP.md  BUILD_OPTIMIZATION.md  COMPILATION_GUIDE.md  Cargo-no-rocksdb.toml  Cargo-no-wasm.toml  Cargo.toml  Cargo_original.toml  DAPP_SYSTEM_PLAN.md  DEPENDENCIES.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCKER_ANALYSIS.md  Dockerfile  EMERGENCY_DEPLOYMENT_FIX.md  FEES.md  FEE_STRUCTURE.md  FINAL_DEPLOYMENT_GUIDE.md  FRONTEND_BACKEND_ANALYSIS.md  INVESTOR_DEMO.md  INVESTOR_QUICKSTART.md  MAINNET_ROADMAP.md  MODERN_FRONTEND_SUMMARY.md  MVP_DEPLOYMENT_CHECKLIST.md  MVP_MANIFEST.md  MVP_TESTNET_LAUNCH.md  MVP_TESTNET_SUMMARY.md  QUICK_START.md  README-UPDATED.md  README.md  README_AIVEN.md  README_SERVER.md  (+33 more)
.sqlx/: query-947d5e828c4a8e985fefb54903f5e547d4dff50ea12228422836b5419d0c38c0.json  query-b98e72ccb2ff02c6e0d50c6788ffbb995cd580ecb2cae8432b07d0be8a4e3566.json  query-f62bb36308b95a79de5022b40e3f36626f300a4c2069fc190aa2bcccc8fc8da3.json
benches/: throughput_benchmark.rs
config/: production.toml  testnet.toml
docs/: API_GUIDE.md  NODE_SETUP.md  OVERVIEW.md  QUICKSTART.md  SMART_CONTRACT_API.md  TESTNET_GUIDE.md  TROUBLESHOOTING.md
docs/investor/: INVESTOR_BRIEF.md
keys/: validator.key
landing/: INVESTOR_DEMO.md  TESTNET_GUIDE.md  api-docs.html  dapp.html  feedback.html  index.html  modern-index.html  mvp.html  token-dapp.html  wallet.html
landing/css/: african-theme.css  modern-style.css  style.css
landing/js/: 3d-background.js  african-theme.js  app.js  dapp.js  modern-app.js  owa-token.js
migrations/: 001_create_dapps_table.sql  001_create_tables.sql  001_initial_schema.sql  001_sqlite_schema.sql  20250404000000_create_api_keys.sql  20250404000000_init_extensions.sql  20250407000857_fix_users_table.sql  20250407172358_init_schema.sql  20250707000000_enable_crypto.sql  20250707000000_setup_schema.sql  20250707000001_create_users_table.sql  20250707000002_add_test_users.sql  20250707000003_create_wallets.sql  20250708000000_add_wallet_address_private_key.sql  20250821100000_create_token_tables.sql  20250821100001_create_token_tables_postgres.sql.backup  20250907120000_create_users_table.sql  20250912090001_create_blockchain_tables_postgres.sql  20250912090002_complete_schema_postgres.sql  20250925010000_adjust_address_lengths.sql  20250925020000_fix_balances_schema.sql  20251018002900_alter_id_to_bigint.sql
owami-cli/: Cargo.toml
owami-cli/src/: main.rs
postman/: Owami.local_environment.json  Owami.postman_collection.json
scripts/: bootstrap_local.ps1  dev_quickrun.ps1  setup_testnet.ps1  testnet_api_test.ps1
src/: api.rs  api_simplified.rs  audit_log.rs  block.rs  blockchain.rs  compiler.rs  config.rs  contract_registry.rs  crypto_utils.rs  db.rs  db_pure_rust.rs  deploy.rs  governance.rs  key_management.rs  lib.rs  lib_simplified.rs  main.rs  main_simple_enhanced.rs  main_simplified.rs  owa_token.rs  rate_limiting.rs  rewards.rs  schema.sql  simple_registry.rs  transaction.rs  vesting.rs  wallet.rs  wasm.rs  wasm_runtime.rs
src/api/: auth.rs  blockchain.rs  dapp.rs  mod.rs  token.rs
src/api_simplified/: dapp.rs
src/auth/: key_manager.rs  lib.rs  middleware.rs  mod.rs  routes.rs
src/consensus/: dpos.rs
src/dapp_examples/: backend_example.rs  deployment_example.rs  smart_contract.sol
src/dapp_examples/tests/: test_examples.rs
src/db/: models.rs
src/models/: mod.rs  user.rs
src/network/: mobile.rs  mod.rs  p2p.rs
src/testnet/: faucet.rs  mod.rs  monitoring.rs  sandbox.rs
testnet/: Cargo.toml
tests/: api_tests.rs  blockchain_tests.rs  rate_limiting_tests.rs  token_tests.rs
wasm_examples/: README.md  compile_contract.ps1  run_all_tests.ps1  test_api_endpoints.ps1  test_deploy_wasm.bat  test_deploy_wasm.ps1  verify_setup.ps1
wasm_examples/simple_contract/: Cargo.toml
wasm_examples/simple_contract/src/: lib.rs
