[package]
name = "owami-network"
version = "0.1.0"
edition = "2021"

[dependencies]
# Authentication
jsonwebtoken = "8.3"
bcrypt = "0.15"

# Core blockchain
ed25519-dalek = { version = "2.1", default-features = false, features = ["rand_core"] }
blake3 = "1.5"
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"], default-features = false }
bincode = "1.3"  # For serialization/deserialization
async-trait = "0.1"  # For async traits

# Web server
axum = "0.7"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs", "limit"] }
governor = "0.6"  # For advanced rate limiting
lru_time_cache = "0.11"  # For IP-based rate limiting
tempfile = "3.10"  # For temporary file handling

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "migrate"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"
toml = "0.8"

# WASM (disabled temporarily for MVP)
# wasmtime = "20.0"
# wasmer = "4.2"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "generate-key"
path = "src/bin/generate_key.rs"