[package]
name = "owami-network"
version = "0.1.0"
edition = "2021"
default-run = "owami-network"

[dependencies]
# Authentication
jsonwebtoken = "8.3"
bcrypt = "0.15"

# WASM and smart contract dependencies
which = "6.0"  # For finding executables
sanitize-filename = "0.5"  # For sanitizing filenames
tempfile = "3.10"  # For temporary files

# Core blockchain
ed25519-dalek = { version = "2.1", default-features = false, features = ["rand_core"] }
blake3 = "1.5"
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
bincode = "1.3"  # For serialization/deserialization
async-trait = "0.1"  # For async traits

# Web server
axum = "0.7"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs", "limit"] }
governor = "0.6"  # For advanced rate limiting
lru_time_cache = "0.11"  # For IP-based rate limiting

# Database
rocksdb = "0.21"

# P2P Networking
libp2p = { version = "0.53", features = ["tcp", "gossipsub", "identify", "kad", "noise", "yamux"] }
libp2p-core = "0.39"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"
toml = "0.8"

# WASM Runtime
wasmtime = { version = "20.0" }
wasmparser = "0.201"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"

# Additional WASM utilities
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "generate-key"
path = "src/bin/generate_key.rs"

[[bin]]
name = "owami-network"
path = "src/main_simple.rs"
