[package]
name = "owami-testnet"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
base64 = "0.22"

[profile.release]
opt-level = 0
debug = true
lto = false
panic = "abort"